--- a/lib/demo.html
+++ b/lib/demo.html
@@ -1,1 +1,1 @@
-<!doctype html><meta charset="utf-8"><title>cron-vue demo</title><script src="./cron-vue.umd.js"></script><link rel="stylesheet" href="./cron-vue.css"><script>console.log(cron-vue)</script>
+<!doctype html><meta charset="utf-8"><title>antv-cron demo</title><script src="./antv-cron.umd.js"></script><link rel="stylesheet" href="./antv-cron.css"><script>console.log(antv-cron)</script>
